--- a/airflow/config_templates/default_airflow.cfg
+++ b/airflow/config_templates/default_airflow.cfg
@@ -170,6 +170,9 @@ web_server_host = 0.0.0.0
 # The port on which to run the web server
 web_server_port = 8080
 
+# Root URL to use for the web server
+web_server_url_prefix: /
+
 # Paths to the SSL certificate and key for the web server. When both are
 # provided SSL will be enabled. This does not change the web server port.
 web_server_ssl_cert =
@@ -299,6 +302,9 @@ flower_host = 0.0.0.0
 # This defines the port that Celery Flower runs on
 flower_port = 5555
 
+# The root URL for Flower
+flower_url_prefix = /
+
 # Default queue that tasks get assigned to and that worker listen on.
 default_queue = default
 
@@ -370,12 +376,12 @@ authenticate = False
 
 [ldap]
 # set this to ldaps://<your.ldap.server>:<port>
-uri = 
+uri =
 user_filter = objectClass=*
 user_name_attr = uid
 group_member_attr = memberOf
-superuser_filter = 
-data_profiler_filter = 
+superuser_filter =
+data_profiler_filter =
 bind_user = cn=Manager,dc=example,dc=com
 bind_password = insecure
 basedn = dc=example,dc=com
